minor spacing fixes to interactive sprites

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,7 +65,7 @@ html, body { height: 100%; padding: 0; margin: 0; }
 }
 #div2 {
     /*This is the interactive sprites*/
-    width: 1100px;
+    width: 1200px;
     height: 200px;
     /*background: #DDA;*/
     display: inline-block;
@@ -87,7 +87,7 @@ html, body { height: 100%; padding: 0; margin: 0; }
 #div4 {
     /*This is the activation plot*/
     margin-top: 50px;
-    margin-left: 130px;
+    margin-left: 30px;
     width: 960px;
     height: 500px;
     /*background: #DAD;*/
